...
    private var estimatedProgressObservation: NSKeyValueObservation?
    
    //MARK:  - Lifecycle
    override func viewDidLoad() {
        super.viewDidLoad()
        
        webView.accessibilityIdentifier = "Unsplash"
        webView.navigationDelegate = self
        presenter?.viewDidLoad()
        
    }
    
    override func viewDidAppear(_ animated: Bool) {
...
